--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,8 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+  <script>
+      
+   </script>
   </body>
 </html>
